Updated home page flex grow to raise the search input higher on the viewport, changed world gravity, lowered plane z axis to fix object clipping issues, added bounding letter material and placed it on body geometry in place of box geometry

--- a/public/output.css
+++ b/public/output.css
@@ -635,6 +635,10 @@ video {
   flex-grow: 1;
 }
 
+.grow-\[2\] {
+  flex-grow: 2;
+}
+
 .select-none {
   -webkit-user-select: none;
           user-select: none;
